--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # spring.application.name=square
 spring.datasource.url=jdbc:postgresql://localhost:5432/Square
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=8089
 server.servlet.context-path=/square
